[gd_scene load_steps=23 format=3 uid="uid://c1pi2qxtq7jq5"]

[ext_resource type="Texture2D" uid="uid://ls1kfserybjc" path="res://Game/Enemies/Bomb_Shark/Bomb_Shark_Spreadsheet_110x94.png" id="1_1mfi3"]
[ext_resource type="Script" path="res://Game/Enemies/Bomb_Shark/bombshark.gd" id="1_7tu34"]
[ext_resource type="Texture2D" uid="uid://crkhas752mr15" path="res://Game/Enemies/Bomb_Shark/Explode_Spreadsheet_124x136.png" id="2_afcyr"]
[ext_resource type="Texture2D" uid="uid://c3yey10653xww" path="res://Game/Enemies/Bomb_Shark/Bomb_Shark_Hurt.png" id="2_wkuwm"]
[ext_resource type="AudioStream" uid="uid://bqtm4bs747usj" path="res://Sounds/large-underwater-explosion-190270.mp3" id="4_dsthh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d7yv5"]
atlas = ExtResource("2_wkuwm")
region = Rect2(0, 0, 104, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8b87"]
atlas = ExtResource("1_1mfi3")
region = Rect2(0, 0, 110, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt6t0"]
atlas = ExtResource("1_1mfi3")
region = Rect2(110, 0, 110, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo2m0"]
atlas = ExtResource("1_1mfi3")
region = Rect2(220, 0, 110, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj65q"]
atlas = ExtResource("1_1mfi3")
region = Rect2(330, 0, 110, 94)

[sub_resource type="SpriteFrames" id="SpriteFrames_1e5ay"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7yv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7yv5")
}],
"loop": false,
"name": &"damaged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8b87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt6t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo2m0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj65q")
}],
"loop": true,
"name": &"swimming",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_32km4"]
radius = 36.0139

[sub_resource type="CircleShape2D" id="CircleShape2D_khwpk"]
radius = 118.038

[sub_resource type="AtlasTexture" id="AtlasTexture_p063u"]
atlas = ExtResource("2_afcyr")
region = Rect2(0, 0, 124, 136)

[sub_resource type="AtlasTexture" id="AtlasTexture_qa0p7"]
atlas = ExtResource("2_afcyr")
region = Rect2(124, 0, 124, 136)

[sub_resource type="AtlasTexture" id="AtlasTexture_s566o"]
atlas = ExtResource("2_afcyr")
region = Rect2(248, 0, 124, 136)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p41g"]
atlas = ExtResource("2_afcyr")
region = Rect2(372, 0, 124, 136)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cgwf"]
atlas = ExtResource("2_afcyr")
region = Rect2(496, 0, 124, 136)

[sub_resource type="AtlasTexture" id="AtlasTexture_2owfa"]
atlas = ExtResource("2_afcyr")
region = Rect2(620, 0, 124, 136)

[sub_resource type="AtlasTexture" id="AtlasTexture_31m4r"]
atlas = ExtResource("2_afcyr")
region = Rect2(744, 0, 124, 136)

[sub_resource type="AtlasTexture" id="AtlasTexture_powf5"]
atlas = ExtResource("2_afcyr")
region = Rect2(868, 0, 124, 136)

[sub_resource type="SpriteFrames" id="SpriteFrames_o5il4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p063u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qa0p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s566o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p41g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cgwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2owfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31m4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_powf5")
}],
"loop": false,
"name": &"explosion",
"speed": 7.0
}]

[node name="Bombshark" type="CharacterBody2D"]
z_index = 3
collision_layer = 8
collision_mask = 0
input_pickable = true
script = ExtResource("1_7tu34")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1e5ay")
animation = &"damaged"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-24, 14)
shape = SubResource("CircleShape2D_32km4")

[node name="Explosion" type="Area2D" parent="."]
collision_layer = 136
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion"]
position = Vector2(-50, 11)
shape = SubResource("CircleShape2D_khwpk")
debug_color = Color(0.869464, 0.000512111, 0.851496, 0.42)

[node name="DeathAnimation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-18, 12)
scale = Vector2(1.53831, 1.47794)
sprite_frames = SubResource("SpriteFrames_o5il4")
animation = &"explosion"
frame_progress = 0.855642

[node name="ForwardExplosion" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-48, 11)
scale = Vector2(1.53831, 1.47794)
sprite_frames = SubResource("SpriteFrames_o5il4")
animation = &"explosion"
frame_progress = 0.855642

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dsthh")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="DeathAnimation" to="." method="_on_explosion_animation_animation_finished"]
[connection signal="animation_finished" from="ForwardExplosion" to="." method="_on_explosion_animation_animation_finished"]
